# golden_age

./: .gitignore  AGENTS.md  README.md  pyproject.toml
backend/apps/account/: admin.py  apps.py  models.py  services.py  tests.py
backend/apps/market/: admin.py  apps.py  models.py
backend/apps/order/: admin.py  apps.py  models.py
backend/apps/stock/: admin.py  apps.py  models.py
backend/apps/trading/: admin.py  apps.py  models.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py
backend/core/: ml_service.py
backend/core/broker/: dtos.py  interfaces.py
backend/core/ml/: lgbm_filter.pkl
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: database.md  db_schema.md
research/backtester/: engine.py  metrics.py  optimizer.py  optimizer_intraday.py
research/data/: download_kospi200.py  dummy_005930.csv  intraday_fetcher.py  intraday_optimization_results.csv  kis_fetcher.py  optimization_results.csv
research/data/csv_data/: 000100.csv  000120.csv  000150.csv  000155.csv  000240.csv  000270.csv  000500.csv  000660.csv  000720.csv  000810.csv  000880.csv  000990.csv  001040.csv  001440.csv  001450.csv  001720.csv  001740.csv  001800.csv  001820.csv  002380.csv  002790.csv  003230.csv  003490.csv  003550.csv  003670.csv  003690.csv  004020.csv  004170.csv  004370.csv  004800.csv  004990.csv  005380.csv  005385.csv  005387.csv  005440.csv  005490.csv  005830.csv  (+165 more)
research/ml/: dataset_builder.py  evaluator.py  evaluator_by_ticker.py  features.py  ml_dataset.csv  trainer.py
research/strategies/: base.py  sample_strategies.py
(+32 files in other folders)
